Implement X-End-User-ID access control (P0 security)
- Add TRUSTED_SERVICE_ACCOUNTS config for whitelisted delegation
- Only trusted SAs can use X-End-User-ID header (403 otherwise)
- Regular users cannot impersonate others (security fix)
- Add 4 unit tests for delegation scenarios (14 total pass)
- All 30 E2E tests pass with security enabled
- Update docs: README, .env.local.example with security model
- Mark Phase 1 security COMPLETE in ROADMAP

--- a/.env.local.example
+++ b/.env.local.example
@@ -26,6 +26,13 @@ PORT=8080
 # Comma-separated list of allowed user emails (for whitelist authorization)
 ALLOWED_USERS=your-email@example.com
 
+# Trusted service accounts that can delegate via X-End-User-ID header
+# Regular users CANNOT use X-End-User-ID to impersonate others (security feature)
+# Only these whitelisted service accounts can set X-End-User-ID for service-to-service delegation
+# Example: TRUSTED_SERVICE_ACCOUNTS=backend-sa@project.iam.gserviceaccount.com,api-gateway@project.iam.gserviceaccount.com
+# For testing/development: Add your test user email to allow X-End-User-ID in tests
+TRUSTED_SERVICE_ACCOUNTS=
+
 # JWT Configuration (OIDC-compliant providers)
 # Default values are for Google Identity Platform
 # For other providers, update these URLs:
